--- a/char_sheet/html/style.css
+++ b/char_sheet/html/style.css
@@ -1,9 +1,14 @@
+h1 {
+    color: #800000;
+}
+
 .sheet-skinny_number {
     width: 2.5em !important;
     text-align: center;
 }
 
 .sheet-teml_text {
+    margin: 0px;
     width: 2.5em !important;
     text-align: right;
     -webkit-appearance: none;
@@ -13,6 +18,13 @@
 }
 
 .sheet-normal_hp {
+    valign="bottom";
+    height: 3em;
+    width: 5em !important;
+    text-align: center;
+}
+
+.sheet-normal_hp_value {
     width: 5em !important;
     text-align: center;
 }
@@ -20,6 +32,12 @@
 .sheet-wide_hp {
     width: 10em !important;
     text-align: center;
+}
+
+.sheet-wide_hp_value {
+    width: 10em !important;
+    text-align: center;
+    font-size: 18px;
 }
 
 .sheet-wide_hp_text {
@@ -67,10 +85,11 @@ td.sheet-table_header_details {
 
 div.sheet-tab-content { display: none; }
 
-input.sheet-tab1:checked ~ div.sheet-tab1,
-input.sheet-tab2:checked ~ div.sheet-tab2,
-input.sheet-tab3:checked ~ div.sheet-tab3,
-input.sheet-tab4:checked ~ div.sheet-tab4 { display: block; } { display: block; }
+input.sheet-tab-main:checked ~ div.sheet-tab-main,
+input.sheet-tab-feats:checked ~ div.sheet-tab-feats,
+input.sheet-tab-powers:checked ~ div.sheet-tab-powers,
+input.sheet-tab-char-data:checked ~ div.sheet-tab-char-data,
+input.sheet-tab-equipment:checked ~ div.sheet-tab-equipment { display: block; } { display: block; }
 
 input.sheet-tab {
     width: 150px;
@@ -106,25 +125,25 @@ input.sheet-tab:checked + span::before {
 
 input.sheet-tab:not(:first-child) + span::before { border-left: none; }
 
-input.sheet-tab2 + span::before {
+input.sheet-tab-feats + span::before {
     background: #fee;
     background: linear-gradient(to top, #f8c8c8, #fee, #f8c8c8);
     left: 163px;
 }
 
-input.sheet-tab2:checked + span::before {
+input.sheet-tab-feats:checked + span::before {
     background: #dcdcdc;
     background: linear-gradient(to top, #fcecec, #f8c8c8, #fcecec);
     border-bottom-color: #fcecec;
 }
 
-input.sheet-tab3 + span::before {
+input.sheet-tab-powers + span::before {
     background: #deeafc;
     background: linear-gradient(to top, #afbff8, #deeafc, #afbff8);
     left: 163px;
 }
 
-input.sheet-tab3:checked + span::before {
+input.sheet-tab-powers:checked + span::before {
     background: #deeafc;
     background: linear-gradient(to top, #deeafc, #afbff8, #deeafc);
     border-bottom-color: #deeafc;
@@ -137,14 +156,20 @@ div.sheet-tab-content {
     padding: 5px;
 }
 
-div.sheet-tab2 { background-color: #fcecec; }
+div.sheet-tab-main { background-color: #ffffe6; }
 
-div.sheet-tab3 { background-color: #deeafc; }
+div.sheet-tab-feats { background-color: #fcecec; }
+
+div.sheet-tab-powers { background-color: #deeafc; }
+
+div.sheet-tab-char-data { }
 
 
-input.sheet-tab3 + span::before { left: 313px; }
+input.sheet-tab-powers + span::before { left: 313px; }
 
-input.sheet-tab4 + span::before { left: 463px; }
+input.sheet-tab-equipment + span::before { left: 463px; }
+
+input.sheet-tab-char-data + span::before { left: 613px; }
 
 .sheet-block-a,
 .sheet-block-switch:checked ~ .sheet-block-b {
