--- a/char_sheet/html/style.css
+++ b/char_sheet/html/style.css
@@ -8,40 +8,54 @@ h1 {
 }
 
 .sheet-teml_text {
-    margin: 0px;
+    margin: 0;
     width: 2.5em !important;
-    text-align: right;
+    text-align: center;
     -webkit-appearance: none;
     -moz-appearance: none;
     text-indent: 1px;
     text-overflow: '';
 }
 
+.sheet-attribute_bonus {
+    width: 4em !important;
+    text-align: center;
+    padding: 0.1em;
+    margin: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+}
+
+.sheet-attribute_bonus_text {
+    text-align: center;
+}
+
 .sheet-normal_hp {
-    valign="bottom";
     height: 3em;
-    width: 5em !important;
+    width: 50%;
     text-align: center;
 }
 
 .sheet-normal_hp_value {
-    width: 5em !important;
+    width: 100% !important;
     text-align: center;
 }
 
 .sheet-wide_hp {
-    width: 10em !important;
+    width: 100%;
     text-align: center;
 }
 
 .sheet-wide_hp_value {
-    width: 10em !important;
+    width: 100% !important;
     text-align: center;
     font-size: 18px;
 }
 
 .sheet-wide_hp_text {
-    width: 10em !important;
+    width: 100%;
     height: 5em !important;
     text-align: center;
 }
@@ -60,7 +74,12 @@ h1 {
 }
 
 .sheet-skill_name {
-    width: 5em;
+    width: 6.5em;
+}
+
+.sheet-hp_column {
+    width: 50%;
+    padding: 0.1em;
 }
 
 .sheet-ability_name {
@@ -88,7 +107,7 @@ div.sheet-tab-content { display: none; }
 input.sheet-tab-main:checked ~ div.sheet-tab-main,
 input.sheet-tab-feats:checked ~ div.sheet-tab-feats,
 input.sheet-tab-powers:checked ~ div.sheet-tab-powers,
-input.sheet-tab-char-data:checked ~ div.sheet-tab-char-data,
+input.sheet-tab-char-config:checked ~ div.sheet-tab-char-config,
 input.sheet-tab-equipment:checked ~ div.sheet-tab-equipment { display: block; } { display: block; }
 
 input.sheet-tab {
@@ -162,14 +181,14 @@ div.sheet-tab-feats { background-color: #fcecec; }
 
 div.sheet-tab-powers { background-color: #deeafc; }
 
-div.sheet-tab-char-data { }
+div.sheet-tab-char-config { }
 
 
 input.sheet-tab-powers + span::before { left: 313px; }
 
 input.sheet-tab-equipment + span::before { left: 463px; }
 
-input.sheet-tab-char-data + span::before { left: 613px; }
+input.sheet-tab-char-config + span::before { left: 613px; }
 
 .sheet-block-a,
 .sheet-block-switch:checked ~ .sheet-block-b {
